--- a/EscapeGame/EscapeGame.csproj
+++ b/EscapeGame/EscapeGame.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
@@ -82,6 +83,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Prison_Door.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Prison_Main_Office.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SCSS.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Prison_Bed.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Prison_Cells.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\P_Bed.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\P_Cells.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\P_Door.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\P_Main_Office.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
