--- a/EscapeGame/EscapeGame.csproj
+++ b/EscapeGame/EscapeGame.csproj
@@ -106,13 +106,22 @@
     <None Include="Resources\P_Cells.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\background.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\P_Door.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\P_Main_Office.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Court_House.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\KO.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Curch.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
